[package]
name = "rust"
version = "0.1.0"
authors = ["Jake McGinty <me@jake.su>"]

[[bin]]
name = "wg-dark"
path = "src/client.rs"

[[bin]]
name = "wg-dark-server"
path = "src/server.rs"

[dependencies]
log = "0.4"
pretty_env_logger = "0.2"
structopt = "0.2"
futures = "0.1"
hyper = "0.12"
hyper-openssl = "*"
openssl = "*"
failure = "0.1"
tokio = "0.1"
tokio-signal = "0.2"
xdg = "2.1"
lazy_static = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "0.11.13"

